--- a/templates/pages/gallery.html
+++ b/templates/pages/gallery.html
@@ -20,6 +20,10 @@
 {% with page.gallery.images.all as images %}
 {% for image in images %}
 <li>
+	<a class="thumbnail" title="{{ image.description }}" href="{{ MEDIA_URL }}{{ image.file }}" data-lightbox="{{ image.description }}">
+		<img src="{{ MEDIA_URL }}{% thumbnail image.file 75 75 %}">
+	</a>
+    <!-- Editado malaspina
     <a class="thumbnail" rel="#image-{{ image.id }}" title="{{ image.description }}" href="{{ MEDIA_URL }}{{ image.file }}">
         <img class="image-overlay-thumb" src="{{ MEDIA_URL }}{% thumbnail image.file 75 75 %}">
     </a>
@@ -29,6 +33,7 @@
         <img class="image-overlay-full" src="{{ MEDIA_URL }}{% thumbnail image.file 0 600 %}"><br>
         <p>{{ image.description }}<br>{{ forloop.counter }} / {{ images|length }}</p>
     </div>
+    -->
 </li>
 {% endfor %}
 {% endwith %}
