--- a/templates/pages/gallery.html
+++ b/templates/pages/gallery.html
@@ -19,7 +19,7 @@
 <ul class="thumbnails gallery">
 {% with page.gallery.images.all as images %}
 {% for image in images %}
-<li>
+<li> <!--  data-toggle="tooltip" data-placement="bottom" -->
 	<a class="thumbnail" title="{{ image.description }}" href="{{ MEDIA_URL }}{{ image.file }}" data-lightbox="{{ image.description }}">
 		<img src="{{ MEDIA_URL }}{% thumbnail image.file 75 75 %}">
 	</a>
